www/blocks/page/_survey-step.scss
.survey-step {

  #progress {
    line-height: 0.8;
    progress {
      width: 100%;
    }
  }

  .inline-error {
    font-size: $global-form-control-font-size*0.95;
    background-color: #FFDDEE;
    color: #B01;
    padding: $global-form-control-padding;
    margin: 0;
    &:empty {
      display: none;
    }
  }


  fieldset { // used for semantic reasons only
    border: none;
    margin: 0;
    padding: 0;
  }

  .submit-disabler {
    display: none;
  }

  .survey-navigation > * {
    margin: 0 auto;
    max-width: 500px;
  }

  .inset-block {
    width: 100%;
    overflow: auto;
    display: block;
    padding: $app-main-footer-padding;
    background-color: $survey-step-inset-block-background-color;
    font-weight: bold;
    color: $survey-step-inset-block-font-color;
    border-top: 1px solid $survey-step-inset-block-border-color;
    border-bottom: 1px solid $survey-step-inset-block-border-color;
  }

  textarea {
    width: 100%;
    height: 6rem;
  }

  .control-container {
    margin: $app-main-footer-padding;
  }

  .prompt-list {

    list-style: none;
    margin: 0;
    padding: 0;

    table-layout: fixed;
    width: 100%;
    word-wrap: break-word;

    input[type="checkbox"], input[type="radio"], button.delete {
      margin: $app-main-footer-padding;
      line-height: 1;
    }

    tr {
      border-bottom: 1px solid $app-list-border-color;
    }
    tr:last-child {
      border-bottom: none;
    }

    td.left,td.right {
      width: 3rem;
      &:empty {
        width: 0;
      }
    }
    td.left {
      background-color: $app-background;
    }

    td.content {
      background-color: #fff;
    }
    label {
      line-height: 1;
      font-size: $global-form-control-font-size;
      display: inline-block;
      padding: $global-form-control-padding*2;
      width: 100%;
    }

    button.delete {
      background-size: 1rem;
      height: 1rem;
      width: 1rem;
    }
    td.right label.placeholder {
      width: 3rem;
      height: 3rem;
      display: block;
      overflow: hidden;
      text-indent: -999px;
    }
  }

  .my-add {
    border: 0;
    text-align: left;
    &::before {
      content: '+';
      padding-right: 0.5rem;
      color: #3a3;
    }
  }

  .my-add {
    border-top: 1px solid $app-list-border-color;
    border-bottom: 1px solid $app-list-border-color;
    width: 100%;
    height: 3rem;
  }

  .add-form {
    padding: 1rem
  }

  #skip-button, #prev-button, #next-button {
    position: relative;
    line-height: 1;
    &:first-child {
      padding-left: 0;
    }
    &:last-child {
      padding-right: 0;
    }
    button {
      width: 100%;
      text-transform: uppercase;
      font-size: 0.8rem;
      padding: $global-form-control-padding*1.5;
    }
  }

  #skip-button {
    button {
      background: $survey-step-skip-button-background-color;
      background: linear-gradient(to bottom, adjust-color($survey-step-skip-button-background-color, $lightness: 5%, $saturation: -5%) 0%, adjust-color($survey-step-skip-button-background-color, $lightness: -5%, $saturation: 5%) 100%);    
      border-radius: 0;
      border: 1px solid adjust-color($survey-step-skip-button-background-color, $lightness: -5%, $saturation: 5%);
      color: $survey-step-skip-button-font-color;
    }
  }


  #prev-button, #next-button {
    div::before {
      position: absolute;
      top: 0;
      cursor: pointer;
      opacity: 0.5;
      height: 100%;
      width: $global-form-control-font-size*1.5;
      background-size: $global-form-control-font-size*0.85;
      background-repeat: no-repeat;
      background-position: center center;
    }
    button {
      text-transform: uppercase;
    }
  }

  #prev-button {

    button {
      padding-left: 2*$global-form-control-padding;
      background: $survey-step-prev-button-background-color;
      background: linear-gradient(to bottom, adjust-color($survey-step-prev-button-background-color, $lightness: 5%, $saturation: -5%) 0%, adjust-color($survey-step-prev-button-background-color, $lightness: -5%, $saturation: 5%) 100%);
    }
    div::before {
      content: '';
      background-image: url('../img/icon/left-triangle.svg');
      left: 0;
    }
  }

  #next-button {
    button {
      padding-right: 2*$global-form-control-padding;
      background: $survey-step-next-button-background-color;
      background: linear-gradient(to bottom, adjust-color($survey-step-next-button-background-color, $lightness: 5%, $saturation: -5%) 0%, adjust-color($survey-step-next-button-background-color, $lightness: -5%, $saturation: 5%) 100%);
    }
    div::before {
      content: '';
      background-image: url('../img/icon/right-triangle.svg');
      right: 0;
    }
  }

  #prev-button, #next-button {
    .disabled {
      visibility: hidden;
    }
  }
  #skip-button .disabled {
    display: none;
  }

  .datetime-control {
    @extend .control-container;
    label {
      font-size: $global-form-control-font-size;
      padding: $global-form-control-padding;
      width: 8rem;
    }
    label {
      padding: calc(#{$global-form-control-padding} + 2px);
    }
    label, input {
      float: left;
      margin-bottom: $app-main-footer-padding;
    }
    label:first-child + input ~ label {
      clear: both;
    }
  }

  .number-control {
    width: 10rem;
    margin: $app-main-footer-padding auto;
    button, input {
      width: 100%;
      border-color: $global-form-control-border-color-dark;
    }
    button {
      background: #00aeff;
      background: linear-gradient(to bottom, #47c4ff 0%, #00aeff 100%);
      font-weight: bold;
      color: #fff;
      font-size: 1.5rem;
      padding: 0.25rem;
    }
    input {
      text-align: center;
      font-size: 1.5rem;
      padding: 1rem;
    }
    input[type=number]::-webkit-outer-spin-button { margin: 0; }
    button:first-child {
      border-bottom-left-radius: 0;
      border-bottom-right-radius: 0;
    }
    button:last-child {
      border-top-left-radius: 0;
      border-top-right-radius: 0;
      border-top: 0;
    }
    input:not(:first-child){
      border-top-left-radius: 0;
      border-top-right-radius: 0;
      border-top: 0;
    }
    input:not(:last-child){
      border-bottom-left-radius: 0;
      border-bottom-right-radius: 0;
    }
    input[type="number"]{
      &::-webkit-inner-spin-button, &::-webkit-outer-spin-button {
        appearance: none;
        -webkit-appearance: none;
      }
    }
  }

  .photo-control, .video-control, .file-control {
    .container {
      position: relative;
      min-height: 200px;
      background-color: $component-background-color;
    }
    .input-activate {
      position: absolute;
      width: 100%;
      height: $global-form-control-padding*1.75+$list-icon-size;
      bottom: $global-form-control-padding;
      text-align: center;
      button {
        background-image: url('../img/icon/camera.svg');
        background-size: $list-icon-size;
        background-position: $global-form-control-padding center;
        background-repeat: no-repeat;
        color: #fff;
        font-weight: bold;
        background-color: rgba(0,141,230,0.9);
        border: solid rgba(0,141,230,0.9);
        border-width: 1px 0;
        padding: $global-form-control-padding*1.75 0;
        font-size: $global-form-control-font-size;
        line-height: 1;
        outline: none;
        white-space: nowrap;
        -webkit-user-select: none;
        width: 80%;
        max-width: 320px;
        min-width: 225px;
        display: inline-block;
      }
      input[type="file"] {
        position: absolute;
        left: 0;
        right: 0;
        top: 0;
        bottom: 0;
        background: transparent;
        opacity: 0;
        -moz-opacity: 0;
        filter: alpha(opacity=0);
        cursor: pointer;
        &::-webkit-file-upload-button {
          visibility: hidden;
        }
        // Needed for Firefox
        width: 100%;
      }
      &.two-buttons {
        bottom: $global-form-control-padding*6;
      }
      &.two-buttons button {
        padding: $global-form-control-padding*1.5 0;
        background-size: $list-icon-size*.75;
        font-size: $global-form-control-font-size*.85;
      }

    }

    .preview-image {
      width: 100%;
    }
    .video-name {
      text-align: center;
      font-size: $global-form-control-font-size*.85;
      &:empty {
        display: none;
      }
    }
  }

  .file-control {
    .file-header {
      padding: $global-form-control-padding;
      font-size: $global-form-control-font-size;
    }
    .input-activate button {
      background-image: none;
    }
  }

  .button-pair {
    padding: 8px 0;
    overflow: auto;
    > * {
      float: left;
      width: 50%;
    }
    > :first-child {
      button {
        background-color: #b00;
        color: #fff;
      }
      padding-right: 4px;
    }
    > :last-child {
      button {
        background-color: #00aeff;
        color: #fff;
      }
      padding-left: 4px;
    }
    button {
      width: 100%;
      border: 0;
      border-radius: 0;
    }
  }
  .custom-choice-form {
    .add-form input {
      width: 100%;
    }
    .add-form button {
      font-size: 0.9rem;
    }
  }

  .number-prompt-form {
    $number-section-header-width: 3rem;
    $number-row-height: 1rem;
    font-size: 0.75rem;
    header {
      text-transform: uppercase;
      background-color: #11deff;
      color: white;
      font-weight: bold;
    }
    aside.number-range {
      section {
        height: $number-row-height+$global-form-control-padding;
        width: 50%;
        span {
          display: inline-block;
          font-weight: bold;
          padding: $global-form-control-padding/2 0;
        }
      }
      section.left {
        float: left;
        header {
          float: left;
        }
        span {
          margin-left: $global-form-control-padding;
        }
      }
      section.right {
        float: right;
        text-align: right;
        header {
          float: right;
        }
        span {
          margin-right: $global-form-control-padding;
        }
      }
      section header {
        color: rgb(0,132,174);
        background: #F0F0FA;
        padding: $global-form-control-padding/2;
        height: $number-row-height+$global-form-control-padding;
        width: $number-section-header-width;
      }
    }
  }
  .inline-skip {
    padding: $global-form-control-padding;
    font-size: $global-form-control-font-size;
    .my-checkbox, .my-label, .my-label label {
      display: inline-block;
    }
    .my-checkbox {
      margin-right: $global-form-control-padding;
    }
    .my-label, .my-label label {
      width: 75%;
    }
  }
  .step-body-region {
    position: relative;
    &.skipped {
      > div:after {
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        z-index: 10;
        position: absolute;
        background: $survey-step-skip-button-background-color;
        background: linear-gradient(to bottom, adjust-color($survey-step-skip-button-background-color, $lightness: 5%, $saturation: -5%) 0%, adjust-color($survey-step-skip-button-background-color, $lightness: -5%, $saturation: 5%) 100%);    
        border-radius: 0;
        border: 1px solid adjust-color($survey-step-skip-button-background-color, $lightness: -5%, $saturation: 5%);
        color: $survey-step-skip-button-font-color;

        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=85)";
        filter: alpha(opacity=85);
        opacity: 0.85;
        text-transform: uppercase;
        content: 'Skipped';
        padding-top: $global-form-control-padding;
        padding-left: $global-form-control-padding;
        text-align: left;
        font-size: $global-form-control-font-size*1.1;
      }
    }
  }
}

